implement ann ivf; minor cleanups
